test/visibility/import/deeperNesting-parentImportBad.good
deeperNesting-parentImportBad.chpl:10: error: Cannot import module 'B'
deeperNesting-parentImportBad.chpl:2: note: a module named 'B' is defined here
deeperNesting-parentImportBad.chpl:10: note: full path or explicit relative import required
deeperNesting-parentImportBad.chpl:10: note: please specify the full path to the module
deeperNesting-parentImportBad.chpl:10: note: or use a relative import e.g. 'import this.M' or 'import super.M'
